manifests/amiranet/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: amiranet-rollout
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: amiranet-app
  template:
    metadata:
      labels:
        app: amiranet-app
    spec:
      containers:
      - name: amiranet
        image: docker.io/noylevi/amiranet:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000 
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m" 
  strategy:
    canary:
      canaryService: amiranet-service-canary
      stableService: amiranet-service-stable
      steps:
      - setWeight: 30
      - pause: {}
      - setWeight: 60
      - pause: {}
      - setWeight: 100
      - pause: {}
