manifests/amiranet/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: amiranet-service-stable
  labels:
    app: amiranet-app  
spec:
  type: ClusterIP
  selector:
    app: amiranet-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: amiranet-service-canary
  labels:
    app: amiranet-app 
spec:
  type: ClusterIP
  selector:
    app: amiranet-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
