manifests/amiranet/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-ingress
  namespace: default

spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
    - name: traefik-service
      namespace: amiranet
      kind: TraefikService
